--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,30 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
+# dependencias
 /node_modules
 /.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+.pnp.js
 
-# testing
+# pruebas
 /coverage
 
 # next.js
 /.next/
 /out/
 
-# production
+# producción
 /build
 
-# misc
+# archivos de sistema
 .DS_Store
 *.pem
 
-# debug
+# logs de depuración
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
 
-# vercel
-.vercel
+# variables de entorno locales
+.env*.local
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
-
-.genkit/*
-.env*
-
-# firebase
-firebase-debug.log
-firestore-debug.log
+# firebase y herramientas
+.firebase/
+.genkit/
