--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,36 @@
-# dependencias
+# dependencies
 /node_modules
 /.pnp
 .pnp.js
 
-# pruebas
+# testing
 /coverage
 
 # next.js
 /.next/
 /out/
 
-# producción
+# production
 /build
 
-# archivos de sistema
+# misc
 .DS_Store
 *.pem
 
-# logs de depuración
+# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# variables de entorno locales
+# local env files
 .env*.local
 
-# firebase y herramientas
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
+
+# firebase
 .firebase/
-.genkit/
