--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,33 @@
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# next.js
+# Next.js
 /.next/
 /out/
+/build/
 
-# production
-/build
+# Production
+/node_modules/
+/.pnp/
+.pnp.js
 
-# misc
-.DS_Store
-*.pem
+# Testing
+/coverage/
 
-# debug
+# Debug
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# local env files
+# Env files
 .env*.local
 
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
-
-# firebase
+# Firebase
 .firebase/
+.firebaserc
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Genkit
+genkit-state.json
