--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,26 @@
-# Next.js
-/.next/
-/out/
-/build/
-
-# Production
-/node_modules/
-/.pnp/
+# Dependencias
+/node_modules
+/.pnp
 .pnp.js
 
-# Testing
-/coverage/
+# Construcción de Next.js
+/.next/
+/out/
 
-# Debug
-logs
-*.log
+# Producción
+/build
+
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Env files
+# Variables de entorno locales
 .env*.local
 
-# Firebase
-.firebase/
-.firebaserc
-
-# OS files
+# Archivos del sistema
 .DS_Store
 Thumbs.db
 
-# Genkit
-genkit-state.json
+# Configuración de Firebase
+.firebase/
